deployments/sql_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-container
  template:
    metadata:
      labels:
        app: mysql-container
    spec:
      containers:
        - name: mysql-container
          image: mysql:8.0.28
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-container
spec:
  selector:
    app: mysql-container
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
