deployments/ingress_controller.yml
apiVersion: networking.k8s.io/v1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: assignapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: frontend-service
              port: 
                number: 80
        - path: /api/?(.*)/c
          pathType: ImplementationSpecific
          backend:
            service:
              name: backend-service
              port: 
                number: 8080
